--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,5 +12,19 @@
     .charts {
       padding: 5px 20px;
     }
+    .listContainer {
+      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+      box-shadow: 2px 4px 10px 1px rgba(119, 141, 66, 0.47);
+      border-radius: 20px;
+      margin: 20px;
+      .listTitle {
+        font-weight: 500;
+        font-size: 20px;
+        color: gray;
+        margin-bottom: 15px;
+        margin: 10px;
+        padding: 10px;
+      }
+    }
   }
 }
