--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -20,6 +20,7 @@
       align-items: center;
       border: 0.5px solid rgb(197, 194, 194);
       padding: 3px;
+      border-radius: 5px;
 
       input {
         border: none;
