--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -4,8 +4,8 @@
   min-height: 100vh;
   background-color: white;
   min-width: 120px;
-  -webkit-box-shadow: 2px 4px 1px 1px rgba(0, 0, 0, 0.47);
-  box-shadow: 2px 2px 10px 1px rgba(201, 152, 190, 0.47);
+  -webkit-box-shadow: 2px 4px 1px 0px rgba(0, 0, 0, 0.47);
+  box-shadow: 2px 2px 10px 0px rgba(201, 152, 190, 0.47);
   border-radius: 10px;
 
   .top {
@@ -16,7 +16,7 @@
     .logo {
       font-size: 20px;
       font-weight: bold;
-      color: #0d4e97;
+      color: teal;
     }
   }
   hr {
@@ -46,7 +46,7 @@
         }
         .icon {
           font-size: 18px;
-          color: #2070cc;
+          color: teal;
           padding: 3px;
         }
         span {
@@ -56,26 +56,27 @@
         }
       }
     }
-  }
-  .bottom {
-    display: flex;
-    align-items: center;
-    margin: 10px;
 
-    .colorOption {
-      width: 20px;
-      height: 20px;
-      border-radius: 5px;
-      border: 1px solid #0d4e97;
-      cursor: pointer;
-      margin: 5px;
+    .bottom {
+      display: flex;
+      align-items: center;
+      margin: 10px;
 
-      &:nth-child(1) {
-        background-color: whitesmoke;
-      }
+      .colorOption {
+        width: 20px;
+        height: 20px;
+        border-radius: 5px;
+        border: 1px solid teal;
+        cursor: pointer;
+        margin: 5px;
 
-      &:nth-child(2) {
-        background-color: #333;
+        &:nth-child(1) {
+          background-color: whitesmoke;
+        }
+
+        &:nth-child(2) {
+          background-color: #333;
+        }
       }
     }
   }
