--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -18,7 +18,7 @@
     border-color: #222;
   }
   .navbar {
-    color: #999;
+    color: rgb(73, 71, 71);
     border-color: #222;
     .search {
       border-color: gray;
