--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,12 +1,15 @@
 .sidebar {
-  flex: 1;
+  // flex: 1;
+  width: 150px;
   border-right: 0.5px solid rgb(197, 194, 194);
   min-height: 100vh;
   background-color: white;
-  min-width: 120px;
+  // min-width: 120px;
   -webkit-box-shadow: 2px 4px 1px 0px rgba(0, 0, 0, 0.47);
   box-shadow: 2px 2px 10px 0px rgba(201, 152, 190, 0.47);
   border-radius: 10px;
+  position: relative;
+  transition: 0.4s;
 
   .top {
     display: flex;
@@ -18,6 +21,52 @@
       font-weight: bold;
       color: teal;
     }
+  }
+
+  .hamburger {
+    position: absolute;
+    right: 0;
+    background: none;
+    border: none;
+    .hamburger {
+      color: #999;
+      border-color: #222;
+    }
+    cursor: pointer;
+
+    margin: auto -15px;
+    background-color: gray;
+    border: 2px solid lightgray;
+    padding: 15px;
+    margin-top: -15px;
+
+    border-radius: 90px;
+    height: 10px;
+    width: 10px;
+    .spann {
+      margin-top: -12px;
+      margin-right: -15px;
+      margin-left: -12px;
+    }
+  }
+  .hamburger span {
+    display: block;
+    margin-top: 4px;
+    background-color: lightgray;
+    border-radius: 15px;
+    height: 2.5px;
+    width: 15px;
+    margin-right: 10px;
+    margin-left: 5px;
+    transition: 0.4s;
+  }
+  .hamburger-in:hover span:nth-child(1) {
+    width: 15px;
+    transform: translate(-3px, 10px) rotate(180deg);
+  }
+  .hamburger-in:hover span:nth-child(3) {
+    width: 15px;
+    transform: translate(3px, -10px) rotate(-180deg);
   }
   hr {
     height: 0;
@@ -49,15 +98,19 @@
           color: teal;
           padding: 3px;
         }
-        span {
+        .button {
           font-style: 13px;
           font-weight: 600;
           color: #999;
         }
+        .button-NX {
+          display: none;
+          transition: 0.4s;
+        }
       }
     }
 
-    .bottom {
+    .botton {
       display: flex;
       align-items: center;
       margin: 10px;
@@ -77,6 +130,23 @@
         &:nth-child(2) {
           background-color: #333;
         }
+      }
+    }
+  }
+}
+.side-nav-container-NX {
+  width: 40px;
+  transition: 0.4s;
+
+  .logo-NX {
+    display: none;
+    transition: 0.4;
+  }
+  .center {
+    ul {
+      .title-NX {
+        visibility: hidden;
+        transition: 0.4;
       }
     }
   }
